--- a/demo/www/index.html
+++ b/demo/www/index.html
@@ -17,6 +17,9 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/highcharts.js"></script>
+    <script src="js/highcharts-ng.js"></script>
 </head>
 <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
